--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,11 +5,11 @@ body{
     background-color: white;width: 100%; height: 950px;margin: 0px;padding: 0px;
 }
 .one{
-float: right;width: 33%;height: 950px;
+float: left;width: 33%;height: 950px;
 }
 .two{
-    float: right;width: 34%;height: 950px;
+    float: left;width: 34%;height: 950px;
 }
 .three{
-    float: right;width: 33%;height: 950px;
+    float: left;width: 33%;height: 950px;
 }
