--- a/src/app/innovative/innovative.component.css
+++ b/src/app/innovative/innovative.component.css
@@ -5,16 +5,21 @@ body{
     background-color: white;width: 100%; height: 950px;margin: 0px;padding: 0px;
 }
 header{
-    background-color: white;width: 100%;height: fit-content;
+    background-color: white;width: 100%;height: fit-content;margin-left: 50px;
 }
 .one{
-    width: 80%;height: 800px;background-color:aqua;overflow: hidden;
+    width: 80%;height: 800px;background-color:aqua;overflow: hidden;margin-left: 50px;border: solid aqua;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 .one .inno{border-radius: 100%;
-    margin-left: 100px;
+    margin-left: 130px;
     width: 75%;
     height: 45%;
+    margin-top: 50px;
    
     
 }
