--- a/src/app/iot/iot.component.css
+++ b/src/app/iot/iot.component.css
@@ -1,18 +1,43 @@
-body{
-    background-color: white;width: 100%; height: 950px;margin: 0px;padding: 0px;
+body {
+    background-color: white;
+    width: 100%;
+    height: 950px;
+    margin: 0px;
+    padding: 0px;
 }
-.main{
-    background-color: white;width: 100%; height: 950px;margin: 0px;padding: 0px;
+
+.main {
+    background-color: white;
+    width: 100%;
+    height: 950px;
+    margin: 0px;
+    padding: 0px;
 }
-header{
-    background-color: white;width: 100%;height: fit-content;
+
+header {
+    background-color: white;
+    width: 100%;
+    height: fit-content;
+    margin-left: 20px;
 }
-.one{
-    width: 80%;height: 800px;background-color:aqua;overflow: hidden;
+
+.one {
+    width: 80%;
+    height: 800px;
+    background-color: aqua;
+    overflow: hidden;
+    margin-left: 25px;
+    border: solid aqua;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
-.img-thumbnail{
+
+.img-thumbnail {
     border-radius: 100%;
-    margin-left: 100px;
+    margin-left: 130px;
     width: 75%;
     height: 45%;
+    margin-top: 50px;
 }
